@@ -15,6 +15,7 @@ Log:
 	- fixed typo (waiting -> waiting for)
 	- some calcs needs 2P1L refresh for ROM dumper
 	- some varname<->utf conversions were missing
+	- adapt refresh of cnt1 depending on the link cable transfer capability
 
 - 08/06/2006, version 0.2.0: roms
 	- reworked dirlist API (API compat broken here)
